force-app/main/default/objects/Subscription_Target_System__mdt/Subscription_Target_System__mdt.object-meta.xml
<CustomObject>
    <description>This metadata is used to configure a list of targeted systems to send subscription data for each object. Any change to the Subscription Preferences on Contact or Lead will use this metadata to send a specific category of subscription preferences to different targeted systems through integration (Mulesoft).</description>
    <label>Subscription Target System</label>
    <pluralLabel>Subscription Target Systems</pluralLabel>
</CustomObject>