force-app/main/default/objects/Subscription_Target_System__mdt/fields/Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_Name__c</fullName>
    <description>API name of the field that will be sent as the unique identifier for the object.</description>
    <inlineHelpText>API name of the field that will be sent as the unique identifier for the object.</inlineHelpText>
    <label>Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>