force-app/main/default/objects/Subscription_Target_System__mdt/fields/Interested_Categories__c.field-meta.xml
<CustomField>
    <fullName>Interested_Categories__c</fullName>
    <description>Field used to configure comma separated list of categories that each target system will be interested to receive. Each value in this field is looked up on the Subscription Categories metadata to find the Subscription Values (Picklist).</description>
    <inlineHelpText>Field used to configure comma separated list of categories that each target system will be interested to receive. Each value in this field is looked up on the Subscription Categories metadata to find the Subscription Values (Picklist).</inlineHelpText>
    <label>Interested Categories</label>
    <type>TextArea</type>
</CustomField>