force-app/main/default/objects/Subscription_Target_System__mdt/fields/Object__c.field-meta.xml
<CustomField>
    <fullName>Object__c</fullName>
    <description>Name of the object that triggers syncing preference to target system, currently Contact or Lead. 1 record is created per object per target system.</description>
    <inlineHelpText>Name of the object that triggers syncing preference to target system, currently Contact or Lead. 1 record is created per object per target system.</inlineHelpText>
    <label>Object</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contact</fullName>
                <default>true</default>
                <label>Contact</label>
            </value>
            <value>
                <fullName>Lead</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>