force-app/main/default/objects/Subscription_Target_System__mdt/fields/Target_System__c.field-meta.xml
<CustomField>
    <fullName>Target_System__c</fullName>
    <description>Target system interested to receive subscription preference data from Salesforce. Whenever subscription preference changes on Contact or Lead, we review interested categories of targeted systems and send subscription preference data to each system.</description>
    <inlineHelpText>Target system interested to receive subscription preference data from Salesforce. Whenever subscription preference changes on Contact or Lead, we review interested categories of targeted systems and send subscription preference data to each system.</inlineHelpText>
    <label>Target System</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>iterable</fullName>
                <label>Iterable</label>
            </value>
            <value>
                <fullName>sendgrid</fullName>
                <label>Sendgrid</label>
            </value>
            <value>
                <fullName>Test</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>