force-app/main/default/objects/Subscription_Target_System__mdt/fields/Unique_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Unique_Identifier__c</fullName>
    <description>Unique identifier in each targeted systems that will be used to update subscription preferences in respective systems.</description>
    <inlineHelpText>Unique identifier in each targeted systems that will be used to update subscription preferences in respective systems.</inlineHelpText>
    <label>Unique Identifier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
                <default>true</default>
                <label>Email</label>
            </value>
            <value>
                <fullName>User Role Id</fullName>
            </value>
            <value>
                <fullName>User Id</fullName>
            </value>
            <value>
                <fullName>Contact Id</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>